--- a/HaskellProject.cabal
+++ b/HaskellProject.cabal
@@ -61,7 +61,7 @@ executable HaskellProject
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules: Planets
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
